<resources>
    <string name="app_name">RecipeKeeper</string>
    <string name="image_name">Recipe Image</string>
    <string name="description_title">Description</string>
    <string name="description">I dont need a big house, just a two-floor condo - you could say I have lofty expectations. Curling is the best sport named after something you do to your hair. I am in a band that does Metallica covers with our private parts - it is called Myphallica. Petrovache. We say we are walking the dog, but the dog always leads. Rumour has it targeted online advertising was developed because the internet was upset that you could read it but it could not read you. Trepidelicious.</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="ingredients">Cheese \nLemon \nChicken \nLettuce \nBread \nSalt \nFish \nRice</string>
    <string name="steps">step1 \nstep 2 \nstep 3 \nstep 4 \nstep5 \nstep 6 \nstep 7 \nstep 8</string>


    //Menu items
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>

    //Navigation bar
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="profile_title">Profile</string>
    <string name="about_title">About</string>
    <string name="about_text">RecipeKeeper stores your favourite recipes.</string>
    <string name="menu_favourite">Favourites</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="splash_text">RecipeKeeper</string>
    <string name="default_recipe_title">Recipe Title</string>
    <string name="recipe_image_text">Recipe Image</string>
    <string name="steps_title">Steps</string>
</resources>