<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recipekeeper.ui.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_recipeDetailsFragment2"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.recipekeeper.ui.fragment.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.recipekeeper.ui.fragment.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_nav_favourite_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.recipekeeper.ui.fragment.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.example.recipekeeper.ui.fragment.RecipeDetailsFragment"
        android:label="@string/recipe_details"
        tools:layout="@layout/fragment_recipe_details" />
</navigation>