<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RecipeDetailsFragment"
    android:background="@color/peach">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/recipe_detail_image_height"
                android:contentDescription="@string/image_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/jalapeno" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="@dimen/recipe_detail_card_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/imageView">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/recipe_detail_card_margin_top"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/item_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_recipe_title"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/recipe_detail_title_size" />


                    <TextView
                        android:id="@+id/description_title"
                        style="@style/title_style"
                        android:text="@string/description_title" />

                    <TextView
                        android:id="@+id/description"
                        style="@style/content_style"
                        android:text="@string/description" />

                    <TextView
                        android:id="@+id/ingredients_title"
                        style="@style/title_style"
                        android:text="@string/ingredients_title" />

                    <TextView
                        android:id="@+id/ingredients"
                        style="@style/content_style"
                        android:text="@string/ingredients" />

                    <TextView
                        android:id="@+id/steps_title"
                        style="@style/title_style"
                        android:text="@string/steps_title" />

                    <TextView
                        android:id="@+id/steps"
                        style="@style/content_style"
                        android:text="@string/steps" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>